tests/sumo/pedestrian_model/striping/errors/disconnected_trip_ignore/errors.sumo.agg
Warning: Person 'p0' could not find route across junction 'C' from walkingArea ':C_w1' to edge 'CW', time=8.00.
Warning: 1 total messages of type: No connection between % '%' and % '%' found.
